--- a/Alu_Prog_14/Alu_Prog_14.csproj
+++ b/Alu_Prog_14/Alu_Prog_14.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{EA56CAD1-B95A-4589-8041-C16C8767CF19}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Alu_Prog_14</RootNamespace>
-    <AssemblyName>Alu_Prog_14</AssemblyName>
+    <AssemblyName>Console Game</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
